changed position to fixed opacity on mobile versions

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -19,7 +19,7 @@ $background-opacity: 0.6;
 
       &:after {
         content:'';
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         width: 100%;
